# pyCroRIS

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  notebook.py  playground.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  ustanova_explorer.py
crosbi/: __init__.py  client.py  config.py
crosbi/endpoints/: __init__.py  casopisi.py  dogadanja.py  financijeri.py  mozvag.py  oprema_api.py  osobe.py  projekti.py  publikacije.py  publikacije_crosbi.py  upisnik.py  ustanove.py  znanstvenici.py
crosbi/export/: __init__.py  csv_export.py  json_export.py
crosbi/models/: __init__.py  casopis.py  common.py  dogadanje.py  financijer.py  mozvag.py  oprema.py  osoba.py  projekt.py  publikacija.py  publikacija_crosbi.py  ustanova.py  ustanova_reg.py  znanstvenik.py
doc/: crosbi.html  index.html  search.js
doc/crosbi/: client.html  config.html  endpoints.html  export.html  models.html
doc/crosbi/endpoints/: casopisi.html  dogadanja.html  financijeri.html  mozvag.html  oprema_api.html  osobe.html  projekti.html  publikacije.html  publikacije_crosbi.html  upisnik.html  ustanove.html  znanstvenici.html
docker/authelia/: configuration.yml
docker/nginx/: nginx.conf  nginx.conf.template
docs/superpowers/plans/: 2026-04-13-notebook-improvements.md  2026-04-13-ustanova-explorer.md  2026-04-15-unit-test-coverage.md
docs/superpowers/specs/: 2026-04-13-ustanova-explorer-design.md
tests/: conftest.py
tests/integration/: test_client.py
tests/unit/: test_client.py  test_config.py
(+20 files in other folders)
